   + In the near future this support will be extended to other places where a paint is selected, such as the terrain, layer and biome drop-downs on th Global Operations screen and other places
 * Icons and other UI elements are now scaled smoothly according to the UI scale setting, rather than only at integer increments, to make the UI scaling more consistent
 * Some small usability improvements
 * Bug fix: custom biomes from pre-1.17 maps are now correctly added to the Biomes panel when Importing a map from Minecraft, with arbitrary colours and named "Biome n" where n is the numerical biome ID

-- Version 2.17.0, released 21-4-2023

 * WorldPainter now supports changing the lower build limit for Minecraft 1.18 and later map formats!
   + It can be changed when creating a new world, or from the Change Height screen (Edit menu), just like the upper build limit
   + It uses a data pack to implement the deviating build limit. Maps with deviating build limits may not load in newer versions of Minecraft!
   + The allowable range is between -2032 and 0, in steps of powers of two, just like the upper build limit
 * The annotations are no longer displayed in the 3D view if they are not configured to be Exported
 * You can now change the size of the render distance circle that you can activate with the "eye" toolbar button
   + Set the radius of the circle in chunks on the Configure View screen (Ctrl+V or View menu)
   + By default it is set to 12 chunks
 * Scripting: the full path to the directory containing the script file is now available as the `scriptDir` global variable
 * Some small bug fixes and error handling improvements

-- Version 2.16.0, released 12-3-2023

 * The material selection control has been simplified. Instead of always showing both legacy (numerical) and modern (name-based) choices it now only shows the appropriate choices for the currently selected map format